<resources>
    <string name="app_name">Track Companion</string>
    <string name="title_more">More</string>
    <string name="title_dashboard">Season</string>
    <string name="title_player">Profile</string>
    <string name="title_activity_map_details">Map Details</string>
    <string name="action_settings">Settings</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="author">Author</string>
    <string name="bug_report">Report a bug</string>
    <string name="app_version">App version</string>
    <string name="no_network">No internet connection available</string>
    <string name="log_in_success">Log in succeed!</string>
    <string name="api_version">API version</string>
    <string name="api_details">Thanks to u/TheFirex for the incredible reverse engineering work on the Trackmania\'s API. His documentation is on Github</string>
    <string name="error_network">Network error</string>
    <string name="beta_description">This app is actually in beta stage. More information like leaderboards, statistics and clubs will be a available in the next months.</string>
    <string name="beta_title">More incoming!</string>
    <string name="easter_egg">You have found the easter egg!</string>
    <string name="download">Download</string>
    <string name="download_progress">Downloading track...</string>
    <string name="download_complete">Download completed!</string>
    <string name="marshmallow_alert">You have not granted the permission to write on your storage!</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="log_in_hint">Log in using your uPlay account</string>
    <string name="error_credentials">Wrong username or password!</string>
    <string name="ok">Ok</string>
    <string name="points">Points:</string>
    <string name="loading">Loading...</string>
    <string name="loading_d">Retrieving data from servers...</string>
    <string name="contribute">How to contribute to this app:</string>
    <string name="ad_button">Watch an Ad to support dev</string>
    <string name="share_button">Share this app with your friends</string>
    <string name="share_message">If you are a fan of Trackmania, let me recommend you this app</string>
    <string name="github">Github</string>
    <string name="session_expired">Session expired</string>
    <string name="relogin_needed">You must login again to continue</string>
    <string name="autologin">Automatic login</string>
    <string name="logout">Logout</string>
    <string name="retry">Wait a few seconds and try again</string>
</resources>
