<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.marco97pa.trackmania.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.marco97pa.trackmania.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.marco97pa.trackmania.player.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_player" />
</navigation>
