<?xml version="1.0" encoding="utf-8"?>

<!--This layout uses https://github.com/elye/loaderviewlibrary-->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".maps.MapDetailsActivity"
    tools:showIn="@layout/activity_map_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/record_top_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/recordRowBronze"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/bronzeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/bronze"
                app:srcCompat="@drawable/trophy" />

            <TextView
                android:id="@+id/bronzeLabel"
                android:layout_width="@dimen/record_row_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bronze" />

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/bronze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recordRowSilver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/silverIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/silver"
                app:srcCompat="@drawable/trophy" />

            <TextView
                android:id="@+id/silverLabel"
                android:layout_width="@dimen/record_row_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/silver" />

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/silver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recordRowGold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/goldIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/gold"
                app:srcCompat="@drawable/trophy" />

            <TextView
                android:id="@+id/goldLabel"
                android:layout_width="@dimen/record_row_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gold" />

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recordRowauthor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/authorIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/authorLabel"
                android:layout_width="@dimen/record_row_label"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author" />

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>